Mobile overflow issue fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -130,6 +130,9 @@
   }
 }
 
-body {
-  overflow-x: hidden;
+
+@media (max-width: 768px) {
+  html, body {
+    overflow-x: hidden;
+  }
 }
